Security olmadan proje tamamlandı.Delete işlemleri kontrol edilebilir.